# testing-competition

./: README.md  pyproject.toml  tox.ini
testing_competition/: analyse_repo.py  contribution_counter.py  custom_types.py  entry_command.py  language_identifier.py
tests/: test_analyse_repo.py  test_python_identifier.py
